--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,13 @@ readme = "README.md"
 python = "^3.7"
 simplug = "*"
 diot = "*"
-aiofiles = "*"
+aiofiles = "0.5.*"
 psutil = "5.*"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
 pytest-cov = "*"
-pytest-asyncio = "0.5.*"
+pytest-asyncio = "*"
 
 [build-system]
 requires = ["poetry>=0.12"]
