--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,6 +28,7 @@ jobs:
 
           cd docs
           cp ../README.md index.md
+          cp ../xqute.png .
           cd ..
           mkdocs gh-deploy --clean --force
         if: success()
