--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,13 +31,13 @@ repos:
     hooks:
     -   id: poetry2setuppy
         name: Convert pyproject.toml to setup.py
-        entry: dephell deps convert --from=poetry --to=setup.py
+        entry: dephell deps convert --from=pyproject.toml --to=setup.py
         language: system
         files: pyproject.toml
         pass_filenames: false
     -   id: poetry2requirements
         name: Convert pyproject.toml to requirements.txt
-        entry: dephell deps convert --from=poetry --to=requirements.txt
+        entry: dephell deps convert --from=pyproject.toml --to=requirements.txt
         language: system
         files: pyproject.toml
         pass_filenames: false
