--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,6 @@
-[pytest]
-addopts = -vv --cov=xqute --cov-report xml:.coverage.xml --cov-report term-missing
-console_output_style = progress
+[flake8]
+ignore = E203, W503, E731
+per-file-ignores =
+    # imported but unused
+    __init__.py: F401, E402
+max-line-length = 80
