--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,10 @@ readme = "README.md"
 python = "^3.7"
 simplug = "^0.2"
 diot = "^0.1"
-aiofiles = "^0"
 psutil = "^5"
-rich = "^12"
+rich = "^13"
 uvloop = "^0"
+aiopath = "^0.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7"
