✨ Add `skipped` to on_job_submitted() to indicate whether the submission has been skipped

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ aiopath = [
     {version = "^0.6", python = ">=3.10"},
 ]
 
+[tool.poetry.build]
+generate-setup-file = true
+
 [tool.poetry.dev-dependencies]
 pytest = "^7"
 pytest-cov = "^4"
