--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,13 @@ console_output_style = "progress"
 junit_family = "xunit1"
 asyncio_mode = "auto"
 
+[tool.mypy]
+ignore_missing_imports = true
+allow_redefinition = true
+disable_error_code = ["attr-defined", "no-redef"]
+show_error_codes = true
+strict_optional = false
+
 [tool.black]
 line-length = 79
 target-version = ['py37', 'py38', 'py39']
