--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-simplug = "^0.3"
+simplug = "^0.4"
 diot = "^0.2"
 rich = "^13"
 uvloop = "^0"
@@ -29,7 +29,7 @@ pytest-cov = "^4"
 pytest-asyncio = "^0"
 
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry>=1.0"]
 build-backend = "poetry.masonry.api"
 
 [tool.pytest.ini_options]
@@ -49,6 +49,6 @@ show_error_codes = true
 strict_optional = false
 
 [tool.black]
-line-length = 79
-target-version = ['py37', 'py38', 'py39']
+line-length = 88
+target-version = ['py38', 'py39', 'py310', 'py311']
 include = '\.pyi?$'
