--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,8 @@ jobs:
     if: "! contains(github.event.head_commit.message, 'wip')"
     strategy:
       matrix:
-        python-version: [3.8, 3.9, "3.10", "3.11", "3.12"]
+        # python-version: [3.8, 3.9, "3.10", "3.11", "3.12"]
+        python-version: [3.8]
 
     steps:
       - uses: actions/checkout@v4
@@ -27,7 +28,8 @@ jobs:
       - name: Run flake8
         run: flake8 xqute
       - name: Test with pytest
-        run: poetry run pytest tests/ -s --junitxml=junit/test-results-${{ matrix.python-version }}.xml
+        # run: poetry run pytest tests/ -s --junitxml=junit/test-results-${{ matrix.python-version }}.xml
+        run: poetry run pytest tests/test_xqute.py::test_job_failed_hook -s --junitxml=junit/test-results-${{ matrix.python-version }}.xml
       - name: Upload pytest test results
         uses: actions/upload-artifact@v4
         with:
