chore: Update dependencies and add poetry show command

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
           poetry config virtualenvs.create false
           python -m pip install flake8
           poetry install -v
+          poetry show
       - name: Run flake8
         run: flake8 xqute
       - name: Show bash version
