--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,22 +8,23 @@ homepage = "https://github.com/pwwang/xqute"
 repository  = "https://github.com/pwwang/xqute"
 readme = "README.md"
 
+[tool.poetry.build]
+generate-setup-file = true
+
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9"
 simplug = "^0.4"
 diot = "^0.2"
 rich = "^13"
 uvloop = "^0"
-aiopath = [
-    {version = "0.5.*", python = "<3.10"},
-    {version = "0.6.*", python = ">=3.10,<3.12"},
-    {version = "0.7.*", python = ">=3.12"},
-]
+cloudpathlib = "^0.20"
+google-cloud-storage = "^2.19.0"
+argx = "^0.2.11"
 
-[tool.poetry.build]
-generate-setup-file = true
+[tool.poetry.extras]
+meta-gs = ["google-cloud-storage"]
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^8"
 pytest-cov = "^5"
 pytest-asyncio = "^0"
