fix: update build workflow to install optional google-cloud-storage dependency and remove Google credentials setup

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
           python -m pip install poetry
           poetry config virtualenvs.create false
           python -m pip install flake8
-          poetry install -v
+          poetry install -v -E meta-gs
           poetry show
       - name: Run flake8
         run: flake8 xqute
