--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,13 +22,14 @@ argx = "^0.2.11"
 google-cloud-storage = {version = "^2.19.0", optional = true}
 
 [tool.poetry.extras]
-meta-gcs = ["google-cloud-storage"]
+gcs = ["google-cloud-storage"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8"
 pytest-cov = "^5"
 pytest-asyncio = "^0"
 python-dotenv = "^1"
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry>=1.0"]
