--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ google-cloud-storage = {version = "^2.19.0", optional = true}
 
 [tool.poetry.extras]
 gcs = ["google-cloud-storage"]
+gs = ["google-cloud-storage"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8"
