--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    if: "! contains(github.event.head_commit.message, 'wip')"
+    if: "! contains(github.event.head_commit.message, 'wip') && ! startsWith(github.ref, 'refs/tags')"
     strategy:
       max-parallel: 1
       matrix:
