--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,10 @@ python = "^3.9"
 simplug = "^0.5"
 rich = "^13"
 uvloop = "^0"
-cloudpathlib = "^0.20"
+yunpath = "^0.0.1"
 argx = "^0.3"
 google-cloud-storage = {version = "^3.0", optional = true}
-cloudsh = {version = "^0.0.5", optional = true}
+cloudsh = {version = "^0.1", optional = true}
 
 [tool.poetry.extras]
 gcs = ["google-cloud-storage"]
@@ -56,5 +56,5 @@ strict_optional = false
 
 [tool.black]
 line-length = 88
-target-version = ['py38', 'py39', 'py310', 'py311']
+target-version = ['py39', 'py310', 'py311', 'py312']
 include = '\.pyi?$'
