--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "xqute"
-version = "0.8.1"
+version = "0.9.0a1"
 description = "A job management system for python"
 authors = ["pwwang <pwwang@pwwang.com>"]
 license = "MIT"
@@ -18,7 +18,7 @@ rich = "^13"
 uvloop = "^0"
 yunpath = "^0.0"
 argx = "^0.3"
-google-cloud-storage = {version = "^3.0", optional = true}
+google-cloud-storage = {version = "^3", optional = true}
 cloudsh = {version = "^0.1", optional = true}
 
 [tool.poetry.extras]
