--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     if: "! contains(github.event.head_commit.message, 'wip') && ! startsWith(github.ref, 'refs/tags')"
     strategy:
-      max-parallel: 1
+      # max-parallel: 1
       matrix:
         python-version: [3.9, "3.10", "3.11", "3.12"]
 
