--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,8 @@ ipykernel = "^6.29.5"
 backports-asyncio-runner = {version = "^1.1.0", python = "<3.11"}
 
 [build-system]
-requires = ["poetry>=1.0"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
 addopts = "-vv --cov=xqute --cov-report xml:.coverage.xml --cov-report term-missing"
