--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,5 +59,5 @@ strict_optional = false
 
 [tool.black]
 line-length = 88
-target-version = ['py39', 'py310', 'py311', 'py312']
+target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
 include = '\.pyi?$'
