docs: add documentation for Quick Start, Schedulers, and User Guide
- Created a new Quick Start guide to help users get started with Xqute quickly, including installation instructions and minimal job examples.
- Added a comprehensive Schedulers document detailing various scheduler backends supported by Xqute, including usage examples and configuration options for each.
- Introduced a User Guide that covers core concepts, job management, execution modes, error handling, environment variables, job output, monitoring, and best practices for using Xqute effectively.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,4 +14,9 @@ extra_css:
     - style.css
 nav:
     - 'Home': 'index.md'
+    - 'Quick Start': 'quickstart.md'
+    - 'User Guide': 'user-guide.md'
+    - 'Schedulers': 'schedulers.md'
+    - 'Plugins': 'plugins.md'
+    - 'Advanced Usage': 'advanced.md'
     - 'API': mkapi/api/xqute
